test/spec_vectors/exports/ok/module_70.wat
(module (memory (export "a") 0 1))