test/spec_vectors/exports/fail/module_82.wat
(module (memory 0) (export "a" (memory 1)))